remove url params from put paths, fix put storage methods, add support for authors and books api, add support for favorite books, favorite authors and book reviews apis located on user paths
